fixed menu toggle z-index

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -126,7 +126,7 @@ hr.small {
 }
 
 #menu-toggle {
-    z-index: 1;
+    z-index: 1001;
     position: fixed;
     top: 0;
     right: 0;
